--- a/index.html
+++ b/index.html
@@ -14,3 +14,4 @@
 </body>
 
 </html>
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=SC3GtGjV31qx2C351yx0rWHEgLHGoA00"></script>
